--- a/pom.xml
+++ b/pom.xml
@@ -1,68 +1,195 @@
-<?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<artifactId>bonita-connectors</artifactId>
-		<groupId>org.bonitasoft.connectors</groupId>
-		<version>1.0.0</version>
-	</parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <artifactId>bonita-connectors</artifactId>
+        <groupId>org.bonitasoft.connectors</groupId>
+        <version>1.0.0</version>
+    </parent>
 
-	<artifactId>bonita-connector-salesforce</artifactId>
-	<packaging>pom</packaging>
-	
-	<name>bonita-connector-salesforce</name>
-	
-	<modules>
-		<module>bonita-connector-salesforce-common</module>
-		<module>bonita-connector-salesforce-createsobject-def</module>
-        <module>bonita-connector-salesforce-createsobject-impl</module>
-        <module>bonita-connector-salesforce-deletesobjects-def</module>
-		<module>bonita-connector-salesforce-deletesobjects-impl</module>
-		<module>bonita-connector-salesforce-retrievesobjects-def</module>
-		<module>bonita-connector-salesforce-retrievesobjects-impl</module>
-		<module>bonita-connector-salesforce-querysobjects-def</module>
-		<module>bonita-connector-salesforce-querysobjects-impl</module>
-		<module>bonita-connector-salesforce-updatesobject-def</module>
-		<module>bonita-connector-salesforce-updatesobject-impl</module>
-	</modules>
-	
-	<properties>
-		<bonita.engine.version>6.2.0</bonita.engine.version>
-		<salesforce.common.version>1.0.0</salesforce.common.version>
-	</properties>
-   
-	<dependencies>
-		<dependency>
-			<!-- Latest Version of Bonita released, against which the initial development 
-				has been done. -->
-			<!-- The connector will be tested against more recent version -->
-			<artifactId>bonita-common</artifactId>
-			<groupId>org.bonitasoft.engine</groupId>
-			<version>${bonita.engine.version}</version>
-			<scope>provided</scope>
-		</dependency>
-	</dependencies>
-	
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>com.force.api</groupId>
-				<artifactId>force-wsc</artifactId>
-				<version>24.0.0</version>
-			</dependency>
-			<dependency>
-				<groupId>com.force.api</groupId>
-				<artifactId>force-partner-api</artifactId>
-				<version>24.0.0</version>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
+    <artifactId>bonita-connector-salesforce</artifactId>
+
+    <name>bonita-connector-salesforce</name>
+
+    <properties>
+        <bonita.engine.version>7.7.4</bonita.engine.version>
+        <salesforce.common.version>1.0.0</salesforce.common.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <!-- Latest Version of Bonita released, against which the initial development
+                has been done. -->
+            <!-- The converter will be tested against more recent version -->
+            <artifactId>bonita-common</artifactId>
+            <groupId>org.bonitasoft.engine</groupId>
+            <version>${bonita.engine.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <artifactId>bonita-common</artifactId>
+            <groupId>org.bonitasoft.engine</groupId>
+            <version>${bonita.engine.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.force.api</groupId>
+            <artifactId>force-wsc</artifactId>
+            <version>44.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.force.api</groupId>
+            <artifactId>force-partner-api</artifactId>
+            <version>44.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>retrofit</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>converter-jackson</artifactId>
+            <version>2.4.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-databind</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>logging-interceptor</artifactId>
+            <version>3.11.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.2</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <artifactId>junit</artifactId>
+            <groupId>junit</groupId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock</artifactId>
+            <version>2.18.0</version>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-databind</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.11.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock</artifactId>
+            <version>1.50</version>
+            <classifier>standalone</classifier>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>2.5.3</version>
+                    <configuration>
+                        <tagNameFormat>@{project.version}</tagNameFormat>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>2.5</version>
+                    <executions>
+                        <execution>
+                            <id>assemble</id>
+                            <phase>none</phase>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>all</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <descriptor>${basedir}/connector-assembly.xml</descriptor>
+                            <appendAssemblyId>true</appendAssemblyId>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>start-job</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <descriptor>${basedir}/startjob-assembly.xml</descriptor>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>get-job</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <descriptor>${basedir}/getjob-assembly.xml</descriptor>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>add-queueItem-job</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <descriptor>${basedir}/add-queueItem-assembly.xml</descriptor>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
