--- a/pom.xml
+++ b/pom.xml
@@ -1,45 +1,46 @@
-<?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<artifactId>bonita-connectors</artifactId>
-		<groupId>org.bonitasoft.connectors</groupId>
-		<version>1.0.0</version>
-	</parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <artifactId>bonita-connectors</artifactId>
+        <groupId>org.bonitasoft.connectors</groupId>
+        <version>1.0.0</version>
+    </parent>
 
-	<artifactId>bonita-connector-salesforce</artifactId>
-	<version>1.1.0-SNAPSHOT</version>
+    <artifactId>bonita-connector-salesforce</artifactId>
+    <version>1.1.0-SNAPSHOT</version>
 
-	<name>Bonita Salesforce Connector</name>
+    <name>Bonita Salesforce Connector</name>
 
-	<properties>
-		<bonita.engine.version>7.7.0</bonita.engine.version>
-	</properties>
+    <properties>
+        <bonita.engine.version>7.7.0</bonita.engine.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 
-	<dependencies>
-		<dependency>
-			<artifactId>bonita-common</artifactId>
-			<groupId>org.bonitasoft.engine</groupId>
-			<version>${bonita.engine.version}</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.force.api</groupId>
-			<artifactId>force-wsc</artifactId>
-			<version>24.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.force.api</groupId>
-			<artifactId>force-partner-api</artifactId>
-			<version>24.0.0</version>
-		</dependency>
-	</dependencies>
+    <dependencies>
+        <dependency>
+            <artifactId>bonita-common</artifactId>
+            <groupId>org.bonitasoft.engine</groupId>
+            <version>${bonita.engine.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.force.api</groupId>
+            <artifactId>force-wsc</artifactId>
+            <version>24.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.force.api</groupId>
+            <artifactId>force-partner-api</artifactId>
+            <version>24.0.0</version>
+        </dependency>
+    </dependencies>
 
 
-	<build>
-		<pluginManagement>
+    <build>
+        <pluginManagement>
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -59,6 +60,11 @@
                         </execution>
                     </executions>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.0</version>
+                </plugin>
             </plugins>
         </pluginManagement>
 
@@ -66,15 +72,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -110,7 +107,7 @@
                             <descriptor>${basedir}/delete-objects-assembly.xml</descriptor>
                         </configuration>
                     </execution>
-                     <execution>
+                    <execution>
                         <id>query-objects-job</id>
                         <phase>package</phase>
                         <goals>
@@ -120,7 +117,7 @@
                             <descriptor>${basedir}/query-objects-assembly.xml</descriptor>
                         </configuration>
                     </execution>
-                     <execution>
+                    <execution>
                         <id>retrieve-objects-job</id>
                         <phase>package</phase>
                         <goals>
@@ -130,7 +127,7 @@
                             <descriptor>${basedir}/retrieve-objects-assembly.xml</descriptor>
                         </configuration>
                     </execution>
-                      <execution>
+                    <execution>
                         <id>update-object-job</id>
                         <phase>package</phase>
                         <goals>
@@ -143,12 +140,13 @@
                 </executions>
             </plugin>
         </plugins>
-	</build>
-	
-	 <scm>
-        <developerConnection>scm:git:https//${env.GIT_USERNAME}:${env.GIT_PASSWORD}@github.com/bonitasoft/bonita-connector-salesforce.git</developerConnection>
-        <connection>scm:git:https//${env.GIT_USERNAME}:${env.GIT_PASSWORD}@github.com/bonitasoft/bonita-connector-salesforce.git</connection>
-        <url>https://github.com/bonitasoft/bonita-connector-salesforce.git</url>
+    </build>
+
+    <scm>
+        <developerConnection>scm:git:https://${env.GIT_USERNAME}:${env.GIT_PASSWORD}@github.com/bonitasoft/bonita-connector-salesforce.git</developerConnection>
+        <connection>scm:git:https://${env.GIT_USERNAME}:${env.GIT_PASSWORD}@github.com/bonitasoft/bonita-connector-salesforce.git</connection>
+        <url>https://github.com/bonitasoft/bonita-connector-salesforce</url>
+        <tag>HEAD</tag>
     </scm>
 
 </project>
