--- a/src/main/resources/salesforce-createsobject.properties
+++ b/src/main/resources/salesforce-createsobject.properties
@@ -1,3 +1,4 @@
+#X-Generator: crowdin.net
 #Category
 Salesforce.category=Salesforce (partner 24.0)
 crm.category=CRM
@@ -11,8 +12,7 @@ ConnectionInformation.pageDescription=Please Enter all required parameters.
 username.label=Username
 password.label=Password
 securityToken.label=Security token
-securityToken.description=You can obtain the token via the Salesforce User Interface\n\
-Your Name->Configuration->My personal information->Reset security token
+securityToken.description=You can obtain the token via the Salesforce User Interface\n\nYour Name->Configuration->My personal information->Reset security token
 #Endpoint
 endpoint.label=Endpoint configuration (optional)
 authEndpoint.label=Authentication
@@ -40,10 +40,4 @@ Parameters.pageDescription=Please enter all object parameters.
 sObjectType.label=Object type
 sObjectType.description=e.g. Account, Contact... If this is a custom object, don't forget to append __c
 fieldValues.label=Object fields
-fieldValues.description=Map of fields to set to the created object. Key=field name, Value=field value 
-
-username.description=
-password.description=
-endpoint.description=
-proxy.description=
-timeouts.description=
+fieldValues.description=Map of fields to set to the created object. Key\=field name, Value\=field value 
