--- a/src/main/resources/salesforce-querysobjects.properties
+++ b/src/main/resources/salesforce-querysobjects.properties
@@ -1,7 +1,8 @@
+#X-Generator: crowdin.net
 #Category
 Salesforce.category=Salesforce (partner 24.0)
 #Connector meta data
-connectorDefinitionLabel=Query Object
+connectorDefinitionLabel=Query Objects
 connectorDefinitionDescription=Execute a query on Salesforce objects (partner 24.0)
 
 #Connection configuration page
@@ -10,8 +11,7 @@ ConnectionInformation.pageDescription=Please Enter all required parameters.
 username.label=Username
 password.label=Password
 securityToken.label=Security token
-securityToken.description=You can obtain the token via the Salesforce User Interface\n\
-Your Name->Configuration->My personal information->Reset security token
+securityToken.description=You can obtain the token via the Salesforce User Interface\n\nYour Name->Configuration->My personal information->Reset security token
 #Endpoint
 endpoint.label=Endpoint configuration (optional)
 authEndpoint.label=Authentication
@@ -37,9 +37,4 @@ readTimeout.label=Read timeout
 Parameters.pageTitle=Query
 Parameters.pageDescription=Please enter a query.
 query.label=Query
-query.description=Query to execute. e.g. SELECT firstName FROM Contact 
-username.description=
-password.description=
-endpoint.description=
-proxy.description=
-timeouts.description=
+query.description=Query to execute. e.g. SELECT firstName FROM Contact
