--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
 {
   "name": "bonita-connector-salesforce",
-  "version": "1.1.4"
+  "coment": "This json file is required by the generate-changelog-action, do not remove it."
 }
